--- a/RedditTop/Info.plist
+++ b/RedditTop/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>RedditBaseUrl</key>
+	<string>$(REDDIT_BASE_URL)</string>
 </dict>
 </plist>
